// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SocialButtonsPane calls \`logIn\` with social connection 1 when first button is clicked 1`] = `
[
  1,
  {
    "get": [Function],
    "item": 1,
  },
]
`;

exports[`SocialButtonsPane calls \`logIn\` with social connection 2 when second button is clicked 1`] = `
[
  1,
  {
    "get": [Function],
    "item": 2,
  },
]
`;

exports[`SocialButtonsPane calls signUpError when isSignUp===true and terms were not accepted 1`] = `
[
  "lock-id-1",
  {
    "code": "social_signup_needs_terms_acception",
  },
]
`;

exports[`SocialButtonsPane renders correctly 1`] = `
<DocumentFragment>
  <div
    class="auth-lock-social-buttons-pane"
    tabindex="0"
  >
    <div
      class="auth0-lock-social-buttons-container"
    >
      <div
        data-__type="auth_button"
      />
      <div
        data-__type="auth_button"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`SocialButtonsPane shows header when instructions are available 1`] = `
<DocumentFragment>
  <div
    class="auth-lock-social-buttons-pane"
    tabindex="0"
  >
    <p>
      instructions
    </p>
    <div
      class="auth0-lock-social-buttons-container"
    >
      <div
        data-__type="auth_button"
      />
      <div
        data-__type="auth_button"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`SocialButtonsPane shows loading when showLoading === true 1`] = `
<DocumentFragment>
  <div
    class="auth-lock-social-buttons-pane"
    tabindex="0"
  >
    <div
      class="auth0-lock-social-buttons-container"
    >
      <div
        data-__type="auth_button"
      />
      <div
        data-__type="auth_button"
      />
    </div>
    <div
      class="auth0-loading-container"
    >
      <div
        class="auth0-loading"
      />
    </div>
  </div>
</DocumentFragment>
`;
